Adding some content to message viewer

--- a/MainApp/app/src/main/res/values/strings.xml
+++ b/MainApp/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="message2">Bonjour</string>
     <string name="message3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ornare ac nisi at vehicula. Duis posuere eros a libero consectetur laoreet vitae aliquam tellus. Duis ut malesuada elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ornare ac nisi at vehicula. Duis posuere eros a libero consectetur laoreet vitae aliquam tellus. Duis ut malesuada elit.</string>
     <string name="message4">Nulla facilisi. Ut placerat augue lacus, sit amet vulputate justo elementum ut. </string>
+    <string name="envoyer">Envoyer</string>
 </resources>
