--- a/Connexion_Inscription/app/src/main/res/values/strings.xml
+++ b/Connexion_Inscription/app/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="Inscription">Inscription</string>
     <string name="mdp_confirmer">Confirmer le mot de passe</string>
+    <string name="cours">Vos cours</string>
+    <string name="VosInterets">Vos intérêts</string>
+    <string name="Suivant">Suivant</string>
 </resources>
