--- a/Feed_Rech_Filtre_Favorite_AutrePersonInfo/app/src/main/res/values/strings.xml
+++ b/Feed_Rech_Filtre_Favorite_AutrePersonInfo/app/src/main/res/values/strings.xml
@@ -45,6 +45,6 @@
     <string name="VosInterets">Vos intérêts</string>
     <string name="Suivant">Suivant</string>
     <string name="pass_must_identical">Les 2 mots de passe doivent être identiques</string>
-    <string name="not_valid_email">Format d'email invalide</string>
+    <string name="not_valid_email">Format d\'email invalide</string>
 
 </resources>
