Completing profile section

--- a/Feed_Rech_Filtre_Favorite_AutrePersonInfo/app/src/main/res/values/strings.xml
+++ b/Feed_Rech_Filtre_Favorite_AutrePersonInfo/app/src/main/res/values/strings.xml
@@ -29,6 +29,11 @@
     <string name="message3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ornare ac nisi at vehicula. Duis posuere eros a libero consectetur laoreet vitae aliquam tellus. Duis ut malesuada elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ornare ac nisi at vehicula. Duis posuere eros a libero consectetur laoreet vitae aliquam tellus. Duis ut malesuada elit.</string>
     <string name="message4">Nulla facilisi. Ut placerat augue lacus, sit amet vulputate justo elementum ut. </string>
     <string name="envoyer">Envoyer</string>
+    <string name="profile_name">Henri</string>
+    <string name="profile_btn1">Information personelles</string>
+    <string name="profile_btn2">Notifications</string>
+    <string name="profile_btn3">Liste de contacts</string>
+    <string name="profile_btn4">Favoris</string>
 
 
     <string name="email">Email</string>
